--- a/03 数组 链表 跳表/作业列表.md
+++ b/03 数组 链表 跳表/作业列表.md
@@ -2,18 +2,18 @@
 
 ## Array 实战题目
 
-- https://leetcode.com/problems/container-with-most-water/
-- https://leetcode.com/problems/move-zeroes/
-- https://leetcode.com/problems/climbing-stairs/
-- [https://leetcode.com/problems/3sum/ ](https://leetcode.com/problems/3sum/)(高频老题）
+- 11   https://leetcode.com/problems/container-with-most-water/
+- 283 https://leetcode.com/problems/move-zeroes/
+- 70   https://leetcode.com/problems/climbing-stairs/
+- 15   [https://leetcode.com/problems/3sum/ ](https://leetcode.com/problems/3sum/)(高频老题）
 
 ## Linked List 实战题目
 
-- https://leetcode.com/problems/reverse-linked-list/
-- https://leetcode.com/problems/swap-nodes-in-pairs
-- https://leetcode.com/problems/linked-list-cycle
-- https://leetcode.com/problems/linked-list-cycle-ii
-- https://leetcode.com/problems/reverse-nodes-in-k-group/
+- 206 https://leetcode.com/problems/reverse-linked-list/
+- 24   https://leetcode.com/problems/swap-nodes-in-pairs
+- 141 https://leetcode.com/problems/linked-list-cycle
+- 142 https://leetcode.com/problems/linked-list-cycle-ii
+- 25   https://leetcode.com/problems/reverse-nodes-in-k-group/
 
 ## 课后作业
 
@@ -27,10 +27,23 @@
 
 
 
-3sum 的哈希表解法
+15. 3sum 的哈希表解法
 
-Climbing stairs 的动态规划解法 斐波那契数列解法
+70. Climbing stairs 的动态规划解法 斐波那契数列解法
 
-linkedlist套路单一，但是得避免代码复杂，学会怎么操作指针
+206. reverse linked list 的recursively方法
 
-linkedlist活用双指针（快慢指针），可以用来判断circle
+24. Swap Nodes in Pairs 的iteration方法
+
+141. Linked list cycle 的哈希表方法，快慢指针（Floyd cycle finding）
+
+142. Linked List Cycle II 
+
+25. reverse nodes in k-group 的O(1)空间---iteration 方法
+
+
+
+linked list套路单一，但是得避免代码复杂，学会怎么操作指针
+
+linked list活用双指针（快慢指针），可以用来判断circle
+
