--- a/03 数组 链表 跳表/283. Move Zeroes.md
+++ b/03 数组 链表 跳表/283. Move Zeroes.md
@@ -1,4 +1,4 @@
-283. Move Zeroes
+## 283   Move Zeroes
 
 Easy
 
@@ -20,7 +20,7 @@ Output: [1,3,12,0,0]
 
 
 
-# 第一次
+## 第一次
 
 双指针，i 遍历数组， j 定位0出现的位置，与i位置的值进行交换（可以直接复制后再后头补0即可）
 
@@ -40,6 +40,31 @@ class Solution {
         if(i<length){
             for(i=i;i<length;i++)
                 nums[i] = 0;
+        }
+    }
+}
+```
+
+
+
+## 第二次
+
+双指针
+
+```java
+class Solution {
+    public void moveZeroes(int[] nums) {
+        int i = 0;
+        for (int j = 0; j < nums.length; j ++) {
+            if (nums[j] != 0) {
+                if (j > i) {
+                    nums[i] = nums[j];
+                    nums[j] = 0;
+                    i++;
+                } else {
+                    i++;
+                }
+            }
         }
     }
 }
