--- a/03 数组 链表 跳表/作业列表.md
+++ b/03 数组 链表 跳表/作业列表.md
@@ -1,5 +1,16 @@
 两数之和题目：[ https://leetcode.com/problems/two-sum/](https://leetcode.com/problems/two-sum/)
 
+## 参考链接
+
+- [Java 源码分析（ArrayList）](http://developer.classpath.org/doc/java/util/ArrayList-source.html)
+- [Linked List 的标准实现代码](http://www.geeksforgeeks.org/implementing-a-linked-list-in-java-using-class/)
+- [Linked List 示例代码](http://www.cs.cmu.edu/~adamchik/15-121/lectures/Linked Lists/code/LinkedList.java)
+- [Java 源码分析（LinkedList）](http://developer.classpath.org/doc/java/util/LinkedList-source.html)
+- LRU Cache - Linked list：[ LRU 缓存机制](http://leetcode-cn.com/problems/lru-cache)
+- Redis - Skip List：[跳跃表](http://redisbook.readthedocs.io/en/latest/internal-datastruct/skiplist.html)、[为啥 Redis      使用跳表（Skip List）而不是使用      Red-Black？](http://www.zhihu.com/question/20202931)
+
+ 
+
 ## Array 实战题目
 
 - 11   https://leetcode.com/problems/container-with-most-water/
@@ -17,13 +28,13 @@
 
 ## 课后作业
 
-- https://leetcode.com/problems/remove-duplicates-from-sorted-array/
-- https://leetcode.com/problems/rotate-array/
-- https://leetcode.com/problems/merge-two-sorted-lists/
-- https://leetcode.com/problems/merge-sorted-array/
-- https://leetcode.com/problems/two-sum/
-- https://leetcode.com/problems/move-zeroes/
-- https://leetcode.com/problems/plus-one/
+- 26   https://leetcode.com/problems/remove-duplicates-from-sorted-array/
+- 189 https://leetcode.com/problems/rotate-array/
+- 21   https://leetcode.com/problems/merge-two-sorted-lists/
+- 88   https://leetcode.com/problems/merge-sorted-array/
+- 1     https://leetcode.com/problems/two-sum/
+- 283 https://leetcode.com/problems/move-zeroes/
+- 66   https://leetcode.com/problems/plus-one/
 
 
 
@@ -41,9 +52,22 @@
 
 25. reverse nodes in k-group 的O(1)空间---iteration 方法
 
+189. Rotate Array 的其他多种方法（除了暴力循环） 
+
+21. merge two sorted lists的递归方法
+
+88. merge sorted array的反向解法
+
+1. two sum 的哈希表算法
+
+
+
+
+
 
 
 linked list套路单一，但是得避免代码复杂，学会怎么操作指针
 
 linked list活用双指针（快慢指针），可以用来判断circle
 
+链表活用prev指针，灵活添加额外的prev（初始节点），少用next，会导致边界处理麻烦。
