--- a/03 数组 链表 跳表/1. Two Sum.md
+++ b/03 数组 链表 跳表/1. Two Sum.md
@@ -93,3 +93,66 @@ The brute force approach is simple. Loop through each element x*x* and find if t
 - Space complexity : O(1)*O*(1).
 
   
+
+## 第二次
+
+哈希表算法，for each number x, we just need to find is there a t-x in the array.
+
+```java
+class Solution {
+    public int[] twoSum(int[] nums, int target) {
+        HashMap<Integer, Integer> hashmap = new HashMap<>();
+        for (int i = 0; i < nums.length; i++) {
+            int component = target - nums[i];
+            if (hashmap.containsKey(component)) {
+                return new int[] {hashmap.get(component), i};
+            }
+            
+            hashmap.put(nums[i], i);
+        }
+        
+        throw new IllegalArgumentException("No two sum solution");
+    }
+}
+```
+
+
+
+before we put the x into the hash, we look back to see is there already a target-x in the map. If it is , return immediately.
+
+
+
+
+
+
+
+#### Approach 2: Two-pass Hash Table
+
+To improve our run time complexity, we need a more efficient way to check if the complement exists in the array. If the complement exists, we need to look up its index. What is the best way to maintain a mapping of each element in the array to its index? A hash table.
+
+We reduce the look up time from O(n)*O*(*n*) to O(1)*O*(1) by trading space for speed. A hash table is built exactly for this purpose, it supports fast look up in *near* constant time. I say "near" because if a collision occurred, a look up could degenerate to O(n)*O*(*n*) time. But look up in hash table should be amortized O(1)*O*(1) time as long as the hash function was chosen carefully.
+
+A simple implementation uses two iterations. In the first iteration, we add each element's value and its index to the table. Then, in the second iteration we check if each element's complement (target - nums[i]*t**a**r**g**e**t*−*n**u**m**s*[*i*]) exists in the table. Beware that the complement must not be nums[i]*n**u**m**s*[*i*] itself!
+
+```java
+public int[] twoSum(int[] nums, int target) {
+    Map<Integer, Integer> map = new HashMap<>();
+    for (int i = 0; i < nums.length; i++) {
+        map.put(nums[i], i);
+    }
+    for (int i = 0; i < nums.length; i++) {
+        int complement = target - nums[i];
+        if (map.containsKey(complement) && map.get(complement) != i) {
+            return new int[] { i, map.get(complement) };
+        }
+    }
+    throw new IllegalArgumentException("No two sum solution");
+}
+```
+
+
+
+**Complexity Analysis:**
+
+- Time complexity : O(n)*O*(*n*). We traverse the list containing n*n* elements exactly twice. Since the hash table reduces the look up time to O(1)*O*(1), the time complexity is O(n)*O*(*n*).
+- Space complexity : O(n)*O*(*n*). The extra space required depends on the number of items stored in the hash table, which stores exactly n*n* elements.
