--- a/03 数组 链表 跳表/15. 3sum.md
+++ b/03 数组 链表 跳表/15. 3sum.md
@@ -1,4 +1,4 @@
-15. 3Sum
+## 15  3Sum
 
 Medium
 
@@ -40,7 +40,7 @@ Output: []
 
 
 
-# 第一次
+## 第一次
 
 双指针
 
@@ -105,3 +105,99 @@ The implementation is straightforward - we just need to modify `twoSumII` to pro
 
 - Space Complexity: from O(log*n*) to O(*n*), depending on the implementation of the sorting algorithm. For the purpose of complexity analysis, we ignore the memory required for the output.
 
+
+
+## 第二次
+
+双指针复习
+
+
+
+哈希集，避免重复元素
+
+```java
+public  List<List<Integer>> threeSum(int[] nums) {
+   Set<List<Integer>> res  = new HashSet<>();
+   if(nums.length==0) return new ArrayList<>(res);
+   Arrays.sort(nums);
+   for(int i=0; i<nums.length-2;i++){
+       int j =i+1;
+       int  k = nums.length-1;
+       while(j<k){
+           int sum = nums[i]+nums[j]+nums[k];
+           if(sum==0)res.add(Arrays.asList(nums[i],nums[j++],nums[k--]));
+                else if ( sum >0) k--;
+                else if (sum<0) j++;
+           }
+
+       }
+       return new ArrayList<>(res);
+}
+```
+
+
+
+
+
+### Approach 2: Hashset
+
+Since triplets must sum up to the target value, we can try the hash table approach from the [Two Sum](https://leetcode.com/articles/two-sum/) solution. This approach won't work, however, if the sum is not necessarily equal to the target, like in [3Sum Smaller](https://leetcode.com/problems/3sum-smaller/) and [3Sum Closest](https://leetcode.com/problems/3sum-closest/).
+
+We move our pivot element `nums[i]` and analyze elements to its right. We find all pairs whose sum is equal `-nums[i]` using the [Two Sum: One-pass Hash Table](https://leetcode.com/articles/two-sum/#approach-3-one-pass-hash-table) approach, so that the sum of the pivot element (`nums[i]`) and the pair (`-nums[i]`) is equal to zero.
+
+To do that, we process each element `nums[j]` to the right of the pivot, and check whether a complement `-nums[i] - nums[j]` is already in the hashset. If it is, we found a triplet. Then, we add `nums[j]` to the hashset, so it can be used as a complement from that point on.
+
+Like in the approach above, we will also sort the array so we can skip repeated values. We provide a different way to avoid duplicates in the ["No-Sort"](https://leetcode.com/problems/3sum/solution/#approach3) approach below.
+
+**Algorithm**
+
+The main function is the same as in the [Two Pointers](https://leetcode.com/problems/3sum/solution/#approach1) approach above. Here, we use `twoSum` (instead of `twoSumII`), modified to produce triplets and skip repeating values.
+
+1. For the main function:
+   - Sort the input array `nums`.
+   - Iterate through the array:
+     - If the current value is greater than zero, break from the loop. Remaining values cannot sum to zero.
+     - If the current value is the same as the one before, skip it.
+     - Otherwise, call `twoSum` for the current position `i`.
+2. For `twoSum` function:
+   - For each index `j > i` in `A` :
+     - Compute `complement` value as `-nums[i] - nums[j]`.
+     - If  `complement` exists in hashset `seen` :
+       - We found a triplet - add it to the result `res`.
+       - Increment `j` while the next value is the same as before to avoid duplicates in the result.
+     - Add `nums[j]` to hashset `seen`
+3. Return the result `res`.
+
+```java
+class Solution {
+    public List<List<Integer>> threeSum(int[] nums) {
+        Arrays.sort(nums);
+        List<List<Integer>> res = new ArrayList<>();
+        for (int i = 0; i < nums.length && nums[i] <= 0; ++i)
+            if (i == 0 || nums[i - 1] != nums[i]) {
+                twoSum(nums, i, res);
+            }
+        return res;
+    }
+    void twoSum(int[] nums, int i, List<List<Integer>> res) {
+        var seen = new HashSet<Integer>();
+        for (int j = i + 1; j < nums.length; ++j) {
+            int complement = -nums[i] - nums[j];
+            if (seen.contains(complement)) {
+                res.add(Arrays.asList(nums[i], nums[j], complement));
+                while (j + 1 < nums.length && nums[j] == nums[j + 1])
+                    ++j;
+            }
+            seen.add(nums[j]);
+        }
+    }
+}
+```
+
+
+
+- Time Complexity: $\mathcal{O}(n^2)$.  `twoSum` is $\mathcal{O}(n)$, and we call it n*n* times.
+
+  Sorting the array takes O(*n*log*n*), so overall complexity is $\mathcal{O}(n\log{n} + n^2)$. This is asymptotically equivalent to $\mathcal{O}(n^2)$.
+
+- Space Complexity: $\mathcal{O}(n$) for the hashset.
