--- a/03 数组 链表 跳表/作业列表.md
+++ b/03 数组 链表 跳表/作业列表.md
@@ -38,27 +38,27 @@
 
 
 
-15. 3sum 的哈希表解法
+15     [3sum](../03 数组 链表 跳表/15. 3sum.md) 的~~哈希表解法~~
 
-70. Climbing stairs 的动态规划解法 斐波那契数列解法
+70     [Climbing stairs](../03 数组 链表 跳表/70. Climbing Stairs.md) 的动态规划解法 斐波那契数列解法
 
-206. reverse linked list 的recursively方法
+206    [reverse linked list](../03 数组 链表 跳表/206. Reverse Linked List.md) 的recursively方法
 
-24. Swap Nodes in Pairs 的iteration方法
+24      [Swap Nodes in Pairs](../03 数组 链表 跳表/24. Swap Nodes in Pairs.md) 的iteration方法
 
-141. Linked list cycle 的哈希表方法，快慢指针（Floyd cycle finding）
+141     [Linked list cycle](../03 数组 链表 跳表/141. Linked List Cycle.md) 的哈希表方法，快慢指针（Floyd cycle finding）
 
-142. Linked List Cycle II 
+142     [Linked List Cycle II](../03 数组 链表 跳表/142. Linked List Cycle II.md) 
 
-25. reverse nodes in k-group 的O(1)空间---iteration 方法
+25      [reverse nodes in k-group](../03 数组 链表 跳表/25. Reverse Nodes in k-Group.md) 的O(1)空间---iteration 方法
 
-189. Rotate Array 的其他多种方法（除了暴力循环） 
+189	[Rotate Array](../03 数组 链表 跳表/189. Rotate Array.md) 的其他多种方法（除了暴力循环） 
 
-21. merge two sorted lists的递归方法
+21      [merge two sorted lists](../03 数组 链表 跳表/21. Merge Two Sorted Lists.md)的递归方法
 
-88. merge sorted array的反向解法
+88      [merge sorted array](../03 数组 链表 跳表/88. Merge Sorted Array.md)的反向解法
 
-1. two sum 的哈希表算法
+1        ~~[two sum](../03 数组 链表 跳表/1. Two Sum.md) 的哈希表算法~~
 
 
 
