--- a/04 栈 队列 优先队列 双端队列/42. Trapping Rain Water.md
+++ b/04 栈 队列 优先队列 双端队列/42. Trapping Rain Water.md
@@ -62,6 +62,39 @@ class Solution {
 
 
 
+## 第二次
+
+stack方法，基于84题的histogram，入栈的都是左边界，右边界一出现就不停的出栈。
+
+```java
+class Solution {
+    public int trap(int[] height) {
+        Stack<Integer> stack = new Stack<>();
+        
+        if (height.length < 2 || height == null)
+            return 0;
+        
+        int water = 0, i = 0;
+        
+        while (i < height.length) {
+            if (stack.isEmpty() || height[i] <= height[stack.peek()]) {
+                stack.push(i);
+                i++;
+            } else {
+                int curr = stack.pop();
+                if (!stack.isEmpty()) {
+                  	// find the smaller height between the two sides
+                    int minheight = Math.min(height[stack.peek()], height[i]);
+                  	// calculate the area
+                    water += (minheight - height[curr]) * (i - stack.peek() - 1);
+                }
+            }
+        }
+        return water;
+    }
+}
+```
+
 
 
 
