--- a/04 栈 队列 优先队列 双端队列/作业列表.md
+++ b/04 栈 队列 优先队列 双端队列/作业列表.md
@@ -31,15 +31,15 @@
 
 
 
-20. Valid parentheses  的stack数据结构用法
+20     [Valid parentheses](./20. Valid Parentheses.md)  的stack数据结构用法
 
-84. largest rectangle in histogram 的分治法， 暴力法注意遍历
+84     [largest rectangle in histogram](../03 数组 链表 跳表/21. M) 的分治法， 暴力法注意遍历
 
-155. min stack的双stack方法
+155    [min stack](../04 栈 队列 优先队列 双端队列/155. Min Stack.md)的双stack方法
 
-239. sliding window maximum的dp方法
+239    [sliding window maximum](../04 栈 队列 优先队列 双端队列/239. Sliding Window Maximum.md)的dp方法
 
-42. trapping rain water 的 dp, stack, 2 pointer方法
+42     [trapping rain water](../04 栈 队列 优先队列 双端队列/42. Trapping Rain Water.md) 的 dp, ~~stack方法~~, 2 pointer方法
 
 
 
