--- a/03 数组 链表 跳表/141. Linked List Cycle.md
+++ b/03 数组 链表 跳表/141. Linked List Cycle.md
@@ -1,4 +1,4 @@
-141. Linked List Cycle
+## 141  Linked List Cycle
 
 Easy
 
@@ -147,8 +147,7 @@ public class Solution {
        \text{Number of iterations} = \text{non-cyclic length} = N
        $$
        
-
-    2. Both pointers are now in the cycle. Consider two runners running in a cycle - the fast runner moves 2 steps while the slow runner moves 1 steps at a time. Since the speed difference is 1, it takes
+2. Both pointers are now in the cycle. Consider two runners running in a cycle - the fast runner moves 2 steps while the slow runner moves 1 steps at a time. Since the speed difference is 1, it takes
        $$
        \dfrac{\text{distance between the 2 runners}}{\text{difference of speed}}
        $$
@@ -156,9 +155,9 @@ public class Solution {
        $$
        \text{Number of iterations} = almost "\text{cyclic length K}"
        $$
-
   
 
-  Therefore, the worst case time complexity is O*(*N*+*K*), which is O*(*n*).
-
+  
+Therefore, the worst case time complexity is O*(*N*+*K*), which is O*(*n*).
+  
 - Space complexity : *O*(1). We only use two nodes (slow and fast) so the space complexity is *O*(1).
